force-app/main/default/objects/CampaignMember/fields/RTL_Assigned_Branch_No_Filter__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Branch_No_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field</description>
    <label>Assigned Branch</label>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Campaign Members (Assigned Branch)</relationshipLabel>
    <relationshipName>Campaign_Members2</relationshipName>
    <type>Lookup</type>
</CustomField>