force-app/main/default/objects/CampaignMember/fields/RTL_Assigned_Channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>