force-app/main/default/objects/CampaignMember/fields/RTL_Assigned_Region_Code_Rpt__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Region_Code_Rpt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>