force-app/main/default/objects/CampaignMember/fields/RTL_Assigned_Zone_Rpt__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Zone_Rpt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Zone/Team Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>