force-app/main/default/objects/CampaignMember/fields/RTL_Attendant_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Attendant_Status__c</fullName>
    <label>Attendant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>1. ลูกค้าให้ความยินยอม ที่สาขา</fullName>
            </value>
            <value>
                <fullName>2. ลูกค้าให้ความยินยอม โดยให้เข้าพบ</fullName>
            </value>
            <value>
                <fullName>3. ลูกค้าให้ความยินยอม ผ่าน TMB Touch</fullName>
            </value>
            <value>
                <fullName>4. ลูกค้าไม่ให้ความยินยอม</fullName>
            </value>
            <value>
                <fullName>5. อื่นๆ (อธิบายเพิ่มเติมในช่อง ข้อคิดเห็น)</fullName>
            </value>
            <value>
                <fullName>1. ลูกค้ารับฟังและให้ความยินยอม</fullName>
                <isActive>false</isActive>
                <label>1. ลูกค้ารับฟังและให้ความยินยอม</label>
            </value>
            <value>
                <fullName>2. ลูกค้ารับฟังแต่ไม่ให้ความยินยอม</fullName>
                <isActive>false</isActive>
                <label>2. ลูกค้ารับฟังแต่ไม่ให้ความยินยอม</label>
            </value>
            <value>
                <fullName>3. ลูกค้าไม่รับฟังและไม่ให้ความยินยอม</fullName>
                <isActive>false</isActive>
                <label>3. ลูกค้าไม่รับฟังและไม่ให้ความยินยอม</label>
            </value>
            <value>
                <fullName>4. อื่นๆ (อธิบายเพิ่มเติมในช่อง ‘ข้อคิดเห็น’)</fullName>
                <isActive>false</isActive>
                <label>4. อื่นๆ (อธิบายเพิ่มเติมในช่อง ‘ข้อคิดเห็น’)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>