force-app/main/default/objects/CampaignMember/fields/RTL_Batch_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Batch_Product_Name__c</fullName>
    <formula>IF(ISBLANK(RTL_Product_Name__c), RTL_Campaign_Product_1__r.Name, RTL_Product_Name__c)</formula>
    <label>Batch Product Name</label>
    <type>Text</type>
</CustomField>