force-app/main/default/objects/CampaignMember/fields/RTL_Batch_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>RTL_Batch_Unique_Key__c</fullName>
    <formula>IF(ISBLANK(RTL_Web_Unique_ID__c), RTL_Marketing_Code__c, RTL_Web_Unique_ID__c)</formula>
    <label>Batch Unique Key</label>
    <type>Text</type>
</CustomField>