force-app/main/default/objects/CampaignMember/fields/RTL_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>