force-app/main/default/objects/CampaignMember/fields/RTL_Branch_Team_Name_Code_Rpt__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Team_Name_Code_Rpt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Branch/Team Name(Code)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>