force-app/main/default/objects/CampaignMember/fields/RTL_Called__c.field-meta.xml
<CustomField>
    <fullName>RTL_Called__c</fullName>
    <description>contact status != new, unused</description>
    <formula>IF( OR (OR( CONTAINS(TEXT(RTL_Contact_Status__c ), &apos;Contact&apos;) , 
TEXT(RTL_Contact_Status__c ) = &apos;Re-attempt&apos;, 
TEXT(RTL_Contact_Status__c ) = &apos;Follow-up&apos;) ,

TEXT(RTL_Contact_Status__c ) = &apos;Close&apos;) , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Called</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>