force-app/main/default/objects/CampaignMember/fields/RTL_Campaign_Channel_formula__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Channel_formula__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
    IF(RTL_Channel_Branch__c, 
         &quot;Branch, &quot;,
        NULL
    ) + 
    IF(RTL_Channel_DirectMail__c, 
        &quot;DirectMail, &quot;,
        NULL
    ) + 
    IF(RTL_Channel_SMS__c, 
        &quot;SMS, &quot;,
        NULL
    ) + 
    IF(RTL_Channel_MIB__c, 
        &quot;MIB, &quot;,
        NULL
    ) +
    IF(RTL_Channel_OBD__c, 
        &quot;OBD, &quot;,
        NULL
    ) +
    IF(RTL_Channel_Outbound__c, 
        &quot;Outbound, &quot;,
        NULL
    ) +
   IF(RTL_Channel_Edm__c, 
        &quot;Edm, &quot;,
        NULL
    ) +
   IF(RTL_Channel_Subsidiary__c, 
        &quot;Subsidiary, &quot;,
        NULL
    ) +

 &quot;.&quot;,

    &quot;, .&quot;,

    NULL
),&quot;.&quot;,&quot;&quot;)</formula>
    <label>Campaign Channel</label>
    <type>Text</type>
</CustomField>