force-app/main/default/objects/CampaignMember/fields/RTL_Campaign_EndDate__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_EndDate__c</fullName>
    <formula>Campaign.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign EndDate</label>
    <type>Date</type>
</CustomField>