force-app/main/default/objects/CampaignMember/fields/RTL_Campaign_Member_Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Member_Sorting_Order__c</fullName>
    <formula>IF( RTL_AL_response__c, &apos;0&apos;, &apos;1&apos;) &amp;
IF( ISBLANK(RTL_Campaign_Priority__c),&apos;99&apos;, LPAD(SUBSTITUTE(LEFT(RTL_Campaign_Priority__c,2),&apos; &apos;,&apos;&apos;),2,&apos;0&apos;)   ) &amp;  
IF( ISBLANK( RTL_Campaign_EndDate__c ),&apos;&apos;,  SUBSTITUTE(Text(RTL_Campaign_EndDate__c),&apos;-&apos;,&apos;&apos;)  ) &amp;
IF( ISBLANK(Campaign.Name ),&apos;&apos;, RPAD(Campaign.Name,20,&apos;_&apos;) )&amp;
IF(ISPICKVAL( RTL_Contact_Status__c , &quot;New&quot;),&apos;1&apos;,
IF(ISPICKVAL( RTL_Contact_Status__c , &quot;Contact (Walk-in/Call-in)&quot;),&apos;2&apos;,
IF(ISPICKVAL(RTL_Contact_Status__c, &quot;Contact&quot;),&apos;3&apos;,
IF(ISPICKVAL(RTL_Contact_Status__c, &quot;Follow-up&quot;),&apos;4&apos;,
IF(ISPICKVAL(RTL_Contact_Status__c, &quot;Re-attempt&quot;),&apos;5&apos;,
IF(ISPICKVAL(RTL_Contact_Status__c, &quot;Close&quot;),&apos;6&apos;,
IF(ISPICKVAL(RTL_Contact_Status__c, &quot;Unused&quot;),&apos;7&apos;,
&apos;99&apos;
)
)
)
)
)
)
) &amp; 
IF( ISBLANK( RTL_Index_Row__c ),&apos;99999&apos;, LPAD(RTL_Index_Row__c , 6 , &apos;0&apos; ) ) &amp;
TEXT(YEAR( DATEVALUE(CreatedDate) )) &amp; LPAD(TEXT(MONTH( DATEVALUE(CreatedDate) )),2,&apos;0&apos;) &amp; LPAD(TEXT(DAY(DATEVALUE(CreatedDate))),2,&apos;0&apos;) &amp; LPAD(TEXT(HOUR(TIMEVALUE(CreatedDate))),2,&apos;0&apos;) &amp; LPAD( TEXT(MINUTE(TIMEVALUE(CreatedDate))),2,&apos;0&apos;) &amp; LPAD(TEXT(SECOND(TIMEVALUE(CreatedDate))) ,2,&apos;0&apos;) &amp; RTL_Marketing_Code__c &amp; RTL_Web_Unique_ID__c</formula>
    <label>Campaign Member Sorting Order</label>
    <type>Text</type>
</CustomField>