force-app/main/default/objects/CampaignMember/fields/RTL_Campaign_Product_3__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Product_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Product-3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTL_product_master__c.RTL_Product_Group_Upper__c</field>
            <operation>equals</operation>
            <valueField>$Source.RTL_Product_Group_3__c</valueField>
        </filterItems>
        <filterItems>
            <field>RTL_product_master__c.RTL_Product_Sub_Group_Upper__c</field>
            <operation>equals</operation>
            <valueField>$Source.RTL_Sub_Group_3__c</valueField>
        </filterItems>
        <filterItems>
            <field>RTL_product_master__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTL_product_master__c</referenceTo>
    <relationshipLabel>Campaign Members (Campaign Product-3)</relationshipLabel>
    <relationshipName>Campaign_Members2</relationshipName>
    <type>Lookup</type>
</CustomField>