force-app/main/default/objects/CampaignMember/fields/RTL_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Type__c</fullName>
    <formula>Campaign.RTL_Campaign_Type_child__c</formula>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>