force-app/main/default/objects/CampaignMember/fields/RTL_CampHis_Phone__c.field-meta.xml
<CustomField>
    <fullName>RTL_CampHis_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Number from Camp Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>