force-app/main/default/objects/CampaignMember/fields/RTL_Channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned Channel</label>
    <type>Checkbox</type>
</CustomField>