force-app/main/default/objects/CampaignMember/fields/RTL_Channel_Edm__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel_Edm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned_Edm</label>
    <type>Checkbox</type>
</CustomField>