force-app/main/default/objects/CampaignMember/fields/RTL_Channel_MIB__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel_MIB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned MIB</label>
    <type>Checkbox</type>
</CustomField>