force-app/main/default/objects/CampaignMember/fields/RTL_Channel_Other__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned Other</label>
    <type>Checkbox</type>
</CustomField>