force-app/main/default/objects/CampaignMember/fields/RTL_Channel_Outbound__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned Outbound</label>
    <type>Checkbox</type>
</CustomField>