force-app/main/default/objects/CampaignMember/fields/RTL_Company_Account__c.field-meta.xml
<CustomField>
    <fullName>RTL_Company_Account__c</fullName>
    <formula>IF(ContactId!=null, HYPERLINK(&quot;/&quot; &amp;Contact.AccountId,Contact.Account__r.TMB_Customer_ID_PE__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company (Account)</label>
    <type>Text</type>
</CustomField>