force-app/main/default/objects/CampaignMember/fields/RTL_Consent__c.field-meta.xml
<CustomField>
    <fullName>RTL_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent</label>
    <type>Checkbox</type>
</CustomField>