force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Address</label>
    <referenceTo>RTL_Contact_Address__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>