force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Aging__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Aging__c</fullName>
    <formula>CASE(MOD(RTL_Register_Date__c - DATE(1985,6,24),7),
1 , CASE( MOD( RTL_Contact_Date__c-RTL_Register_Date__c,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
2 , CASE( MOD( RTL_Contact_Date__c-RTL_Register_Date__c,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( RTL_Contact_Date__c-RTL_Register_Date__c,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
4 , CASE( MOD( RTL_Contact_Date__c-RTL_Register_Date__c,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
5 , CASE( MOD( RTL_Contact_Date__c-RTL_Register_Date__c,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
6 , CASE( MOD( RTL_Contact_Date__c-RTL_Register_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,4,0),
CASE( MOD( RTL_Contact_Date__c-RTL_Register_Date__c ,7),1,1,2,2,3,3,4,4,5,4,6,4,0))
+(FLOOR(( RTL_Contact_Date__c-RTL_Register_Date__c )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>