force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Branch__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Branch</label>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Campaign Members (Contact Branch)</relationshipLabel>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>