force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Branch_Team_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Branch_Team_Name_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Branch/ Team Name (Code)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>