force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Channel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>