force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Date__c</fullName>
    <description>Contact Date to be used for SLA calculation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Date (for SLA)</label>
    <type>Date</type>
</CustomField>