force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Date/Time</label>
    <type>DateTime</type>
</CustomField>