force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Method__c</fullName>
    <description>Get value from field RTL_Contact_Method__c in Lead&apos;s data.</description>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Call Me Now</fullName>
            </value>
            <value>
                <fullName>Call Me Later</fullName>
            </value>
            <value>
                <fullName>Normal Request</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>AL Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>