force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Region_Group_Head__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Region_Group_Head__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Region/ Group Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>