force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Staff_ID__c</fullName>
    <formula>RTL_Contact_Staff_Name__r.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Staff ID</label>
    <type>Text</type>
</CustomField>