force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Staff_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Staff Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>