force-app/main/default/objects/CampaignMember/fields/RTL_Contact_Zone_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Zone_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Zone/Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>