force-app/main/default/objects/CampaignMember/fields/RTL_Count_NA__c.field-meta.xml
<CustomField>
    <fullName>RTL_Count_NA__c</fullName>
    <formula>If( TEXT(RTL_OfferResult_Product_1__c) = &apos;N/A&apos;, 1, 0) +
If( TEXT(RTL_OfferResult_Product_2__c) = &apos;N/A&apos;, 1, 0) +
If( TEXT(RTL_OfferResult_Product_3__c) = &apos;N/A&apos;, 1, 0) +
If( TEXT(RTL_OfferResult_Product_4__c) = &apos;N/A&apos;, 1, 0) +
If( TEXT(RTL_OfferResult_Product_5__c) = &apos;N/A&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTL_Count_NA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>