force-app/main/default/objects/CampaignMember/fields/RTL_Count_Not_Interest__c.field-meta.xml
<CustomField>
    <fullName>RTL_Count_Not_Interest__c</fullName>
    <formula>If( TEXT(RTL_OfferResult_Product_1__c) = &apos;Not Interested&apos;, 1, 0) + 
If( TEXT(RTL_OfferResult_Product_2__c) = &apos;Not Interested&apos;, 1, 0) + 
If( TEXT(RTL_OfferResult_Product_3__c) = &apos;Not Interested&apos;, 1, 0) + 
If( TEXT(RTL_OfferResult_Product_4__c) = &apos;Not Interested&apos;, 1, 0) + 
If( TEXT(RTL_OfferResult_Product_5__c) = &apos;Not Interested&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTL_Count_Not_Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>