force-app/main/default/objects/CampaignMember/fields/RTL_Cus_Refer_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Cus_Refer_Code__c</fullName>
    <description>for dropleadMGM</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Reference Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>