force-app/main/default/objects/CampaignMember/fields/RTL_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Segment__c</fullName>
    <formula>Contact.Account.Segment_crm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>