force-app/main/default/objects/CampaignMember/fields/RTL_CXM_Product_Group_3__c.field-meta.xml
<CustomField>
    <fullName>RTL_CXM_Product_Group_3__c</fullName>
    <formula>IF((TEXT(RTL_Product_Group_3__c) = &quot;Loan&quot; &amp;&amp; (BEGINS(UPPER(TEXT(RTL_Sub_Group_3__c)), &quot;SECURED&quot;) || BEGINS(UPPER(TEXT(RTL_Sub_Group_3__c)), &quot;HOME&quot;))), &quot;Secured Loan&quot;, IF((TEXT(RTL_Product_Group_3__c) = &quot;Loan&quot; &amp;&amp; (BEGINS(UPPER(TEXT(RTL_Sub_Group_3__c)), &quot;SECURED&quot;) = FALSE || BEGINS(UPPER(TEXT(RTL_Sub_Group_3__c)), &quot;HOME&quot;) = FALSE)), &quot;Unsecured Loan&quot;, TEXT(RTL_Product_Group_3__c)) )</formula>
    <label>CXM Product Group 3</label>
    <type>Text</type>
</CustomField>