force-app/main/default/objects/CampaignMember/fields/RTL_Data_as_of_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Data_as_of_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data as of Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>