force-app/main/default/objects/CampaignMember/fields/RTL_Dealer_Name_1__c.field-meta.xml
<CustomField>
    <fullName>RTL_Dealer_Name_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>