force-app/main/default/objects/CampaignMember/fields/RTL_Export_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Export_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Export Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>