force-app/main/default/objects/CampaignMember/fields/RTL_Hub_Code_3__c.field-meta.xml
<CustomField>
    <fullName>RTL_Hub_Code_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hub Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>