force-app/main/default/objects/CampaignMember/fields/RTL_ID_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>RTL_ID_NUMBER__c</fullName>
    <formula>Contact.ID_Number_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Number</label>
    <type>Text</type>
</CustomField>