force-app/main/default/objects/CampaignMember/fields/RTL_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_ID_Type__c</fullName>
    <formula>TEXT(Contact.ID_Type_PE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Type</label>
    <type>Text</type>
</CustomField>