force-app/main/default/objects/CampaignMember/fields/RTL_Interested__c.field-meta.xml
<CustomField>
    <fullName>RTL_Interested__c</fullName>
    <description>contact status = contact and offer result = interested</description>
    <formula>IF( AND ( CONTAINS(TEXT(RTL_Contact_Status__c ), &apos;Contact&apos;)
 , 
RTL_Offer_Result_Eng__c = &apos;Interested&apos;)
, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>