force-app/main/default/objects/CampaignMember/fields/RTL_Is_Interface_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Interface_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Interface Status</label>
    <type>Checkbox</type>
</CustomField>