force-app/main/default/objects/CampaignMember/fields/RTL_Is_Interface_Success__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Interface_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Interface Success</label>
    <type>Checkbox</type>
</CustomField>