force-app/main/default/objects/CampaignMember/fields/RTL_Is_Send_To_HPAP__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Send_To_HPAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Send to HPAP</label>
    <type>Checkbox</type>
</CustomField>