force-app/main/default/objects/CampaignMember/fields/RTL_isBatchUpdateCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>RTL_isBatchUpdateCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag for allow update campaign member when campaign expired.</description>
    <label>isBatchUpdateCampaignMember</label>
    <type>Checkbox</type>
</CustomField>