force-app/main/default/objects/CampaignMember/fields/RTL_Last_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Last_Contact_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Contact Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>