force-app/main/default/objects/CampaignMember/fields/RTL_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>