force-app/main/default/objects/CampaignMember/fields/RTL_Lead_Remark__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL Lead Remark</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>