force-app/main/default/objects/CampaignMember/fields/RTL_Market_Conduct__c.field-meta.xml
<CustomField>
    <fullName>RTL_Market_Conduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market_Conduct</label>
    <type>Checkbox</type>
</CustomField>