force-app/main/default/objects/CampaignMember/fields/RTL_Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Marketing_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Marketing Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>