force-app/main/default/objects/CampaignMember/fields/RTL_Media_Source__c.field-meta.xml
<CustomField>
    <fullName>RTL_Media_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Media Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>