force-app/main/default/objects/CampaignMember/fields/RTL_Medium__c.field-meta.xml
<CustomField>
    <fullName>RTL_Medium__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>