force-app/main/default/objects/CampaignMember/fields/RTL_Memo__c.field-meta.xml
<CustomField>
    <fullName>RTL_Memo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Memo</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>