force-app/main/default/objects/CampaignMember/fields/RTL_Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>RTL_Not_Interested__c</fullName>
    <description>contact status = contact and offer result = not interested</description>
    <formula>IF( AND ( CONTAINS(TEXT(RTL_Contact_Status__c ), &apos;Contact&apos;)  , 

RTL_Offer_Result_Eng__c = &apos;Not Interested&apos;) , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Interested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>