force-app/main/default/objects/CampaignMember/fields/RTL_Num_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>RTL_Num_Opportunities__c</fullName>
    <description>Count number of opportunity created</description>
    <formula>IF( RTL_RelatedOpportunity_1__c != null,1,0) + 
IF( RTL_RelatedOpportunity_2__c != null,1,0) + 
IF( RTL_RelatedOpportunity_3__c != null,1,0) + 
IF( RTL_RelatedOpportunity_4__c != null,1,0) + 
IF( RTL_RelatedOpportunity_5__c != null,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>